Fixed flicker via using display instead of HTML insertion on sections

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -46,6 +46,10 @@ body {
   border-radius: 1.5rem;
 }
 
+.hidden {
+  display: none;
+}
+
 /*content styles*/
 /*rating page styles*/
 .star-image {
